Wrote some more

--- a/goals.Rmd
+++ b/goals.Rmd
@@ -50,25 +50,31 @@ A general rule I applied to the design of the user interface `plotscaper` was "l
 
 ## Interactive features
 
-The next important question was which interactive features to support. As was discussed in Section \@ref(background), there are many interactive data visualization features, and some are more useful than others (for data exploration, anyway). Furthermore, the amount of time and effort required to implement these features also varies considerably. Therefore, choosing the right set of features to prioritize was a key design consideration.
+The next important question was which interactive features to support. As was discussed in Section \@ref(background), there are many interactive data visualization features, and some are more useful than others. Furthermore, the amount of time and effort required to implement these features also varies considerably. Therefore, choosing the right set of features to prioritize was a key design consideration.
 
-As was hinted at throughout Section \@ref(background), the core feature to implement was generalized linked selection or brushing. Specifically, every plot in `plotscaper` needed to support both dispatching and displaying selection events. This feature is highly desirable because it allows users to quickly explore trends across dynamically-generated subsets of their data, making it one of the most useful tools in the interactive data visualization arsenal [@buja1996; @heer2012; @wilhelm2003; @wilhelm2008; @wills2008; @ware2019; @ward2015]. However, it also requires a significant amount of careful planning and programming effort. Simply adding this functionality on top of an existing static data visualization system does not work. Naive solutions, like replacing the entire plot upon selection, produce unsatisfactory behavior, see for example the following quote by Adalbert Wilhelm from chapter II.9 of the Data Visualization Handbook:
+As was hinted at throughout Section \@ref(background), and particularly in Section \@ref(linked-selection), the key feature to implement was generalized linked selection or brushing. Linked selection is highly desirable because it allows users to quickly explore trends across dynamically-generated subsets of their data, making it one of the most useful tools in interactive data visualization [@buja1996; @heer2012; @wilhelm2003; @wilhelm2008; @wills2008; @ware2019; @ward2015]. However, making a generalized version of linked selection is not trivial. First, all plots need to be able react to user interaction - such as clicking-and-dragging - by detecting which objects are inside the selection region, accumulating the corresponding cases, and dispatching this information as a selection event. Second, the system needs to keep track of which cases are currently selected and react to selection events from the plots by updating and dispatching its own events. Finally, the plots must also react to the events from the system by recomputing all of the necessary summary statistics and re-rendering. Doing this in an a way that is efficient and which generalizes well requires some care.
 
-> "[Replacing the entire plot] only works ﬁne when we have individual plot symbols for each observation, as in scatterplots for example, where some attributes are changed by the user interaction. But even when replacing plot parameters the user loses the possibility to compare the current plot with previous versions. The
-user can only compare the current image with a mental copy of the previous image and hence the comparison might get distorted."
+Further, as also discussed in Sections \@ref(linked-selection) and \@ref(stacking-part-whole), linked selection also presents some challenges for *displaying* the corresponding information. Naive solutions, like re-rendering the entire plot upon selection, produce unsatisfactory visual behavior, see for example the following quote by Wilhelm:
+
+> "[Re-rendering the entire plot] only works ﬁne when we have individual plot symbols for each observation, as in scatterplots for example, where some attributes are changed by the user interaction. But even when replacing plot parameters the user loses the possibility to compare the current plot with previous versions. The user can only compare the current image with a mental copy of the previous image and hence the comparison might get distorted."
 >
-> [@wilhelm2008, pp. 210]
+> Adalbert @wilhelm2008, Chapter II.9 of the Data Visualization Handbook, pp. 210
 
-Thus, linked selection had to be directly integrated into the data visualization pipeline, or rather, the data visualization pipeline had to be built around this feature. This was a significant programming challenge. Crucially also, I aimed for a consistent linked selection behavior across *all* implemented plot types. This necessitated careful consideration of the issues discussed in Section \@ref(problems).
+Combined, these issues make linked selection a feature that is difficult to simply add on top of an existing static data visualization system. Instead, the feature has to be directly integrated into the data visualization pipeline, or rather, the data visualization pipeline has to be built *around it*. Therefore, during `plotscaper`'s development, developing an efficient and consistent model for linked selection took a significant amount of programming time and effort. 
 
-Other important features which also had to be directly integrated into the data visualization pipeline were parameter manipulation and representation switching. These features give the user the ability to quickly see alternative views of their data and discover trends that they may otherwise miss (see Sections \@ref(representation-switching)). This makes them highly desirable. 
+Two other more advanced features I wanted to support were parameter manipulation and representation switching. These features give the user the ability to quickly see alternative views of their data and discover trends that they may otherwise miss (see Sections \@ref(representation-switching)). This makes them highly desirable. Similar to linked selection, these features affect more than just the surface-level graphical attributes of plots, requiring a direct integration in the data visualization pipeline. 
 
-Another interesting challenge was querying. Upon seeing an interesting visual trend in their data, users may often be interested in the precise data values that produced that visual impression. Thus, being able to interactively query geometric objects is very useful. This feature is arguably simpler to implement than the previously mentioned features, however, it should be noted that what complicates its implementation is that, often, the user does not directly care about the visual attributes of the queried geometric objects, but the instead the statistics underlying those visual attributes. For instance, when querying a stacked barplot, we do not care about the stacked values, but instead about the values corresponding to individual segments. Thus, querying provided an intermediate level of challenge. 
+Querying was another feature which I deemed desirable. Querying can be highly useful in interactive workflows: upon seeing an interesting visual trend in their data, a user may often be interested in the precise data values that produced that graphic. While this feature is arguably simpler to implement than features like linked selection or parameter manipulation discussed above, there are still some important nuances. For instance, it is important to note that the information the user is interested in are *not* the values of the visual attributes per se, but instead the underlying summary statistics, and these can at times differ. For instance, when querying a stacked barplot, we do not care about the stacked (cumulated) values, but instead about the values corresponding to individual segments. Further, at times, users may find it useful to query statistics which are not directly represented in the graphic (but still relate to the underlying data subset). As such, querying is not a purely graphical operation either, and does require some careful thought.
 
-Other interesting feature was bi-directional communication. The ability to call functions in an interactive session and have the figure respond directly can be invaluable in data exploration. However, compared to a static data visualization, this requires a specialized setup, such as having live server respond to messages from the client. Thus, developing a system for communicating between the R client and the JavaScript "backend" (the figure) was necessary.
+Another major development goal was communication between the figure (client) and an R session (server). The ability to call functions in an interactive R session to manipulate or query the figure directly can be invaluable in data exploration. However, clearly, compared to static data visualization, this feature requires a live connection for exchanging messages between the server and the client. Further, if we want the figure to not only react to messages, but also be able to send information back, the connection needs to be bi-directional [making the fundamental model that of sockets rather than some unidirectional architecture such as REST, see @fielding2002].
 
-Finally, there were some useful features which were relatively simple to implement. These included changing size and alpha, zooming, and panning. These features could be implemented by manipulating scales and/or the visual attributes of geometric objects, without modifying earlier stages of the data visualization pipeline. Nevertheless, desppite their simplicity, these features could still be highly useful. For example, zooming and panning can help to reveal trends within narrow data ranges, while adjustments to size and alpha can mitigate overplotting. Therefore, implementing these features was an easy choice.
+There were also several beneficial features which were relatively straightforward to implement: changing size and alpha, zooming, and panning. What made these features easier to implement is that they directly manipulate more surface-level attributes of the plot (i.e. scales), without altering earlier stages of the visualization pipeline. Despite their simplicity, these features can still be highly useful in interactive workflows. For example, zooming and panning can help to reveal trends within narrow ranges of the data, while adjustments to size and alpha can mitigate overplotting. Therefore, implementing these features was an easy choice.
 
-There were other interactive features mentioned in Section \@ref(common-features) which I choose not to implement, including selection operators, semantic zooming, and grand tours (and animation in general). The primary reason for this was that these features are quite advanced and require substantial programming effort, making them better suited to specialized packages rather than general interactive data visualization frameworks. There were also some more feature-specific reasons. For instance, while selection operators (ability to combine selections with logical operators such as AND, OR, or XOR, and chain sequences of these operations) can be a powerful tool for more advanced users, its utility for novices is debatable. Specifically, in line with @wills2000, who argued that selection systems should be simple, powerful, and forgiving, I opted for a simple transient/persistent selection model. Similarly, semantic zooming, while also powerful in specific contexts, did not seem worth the effort since it is limited to only a certain number of plot types such as maps. Finally, grand tours and animation also seemed to be beyond the scope of the package.
+Finally, there were also several interactive features discussed in Section \@ref(common-features) which I choose not to implement, including selection operators, semantic zooming, and grand tours (and animation in general). The primary reason for this was that these features are quite advanced and specialized, making them better suited to dedicated packages rather than general interactive data visualization frameworks. There were also some more feature-specific reasons. For instance, while selection operators (ability to combine selections with logical operators such as AND, OR, or XOR, and chain sequences of these operations) can be a powerful tool for more advanced users, its utility for novices is debatable. Specifically, in line with @wills2000, who argued that selection systems should be simple, powerful, and forgiving, I opted for a simple transient/persistent selection model. Similarly, semantic zooming, while also powerful in specific contexts, did not seem worth the effort since it is limited to only a certain number of plot types such as maps. Finally, grand tours and animation also seemed to be beyond the scope of the package.
 
+## Summary
+
+The practical part of this project had two primary objectives: to create a versatile package for interactive data exploration and to explore the challenges discussed in Section \@ref(problems). The aim was to provide a tool which would be accessible to wide range of users, while also allowing some more advanced customization options. Achieving this required a simple API and an intuitive graphical interface. To support complex interactive workflows, I chose to implement a comprehensive suite of interactive features, including generalized linked selection, parameter manipulation, representation switching, querying, client-server communication, zooming, panning, and size/alpha adjustments.
+
+In the next section, I will discuss concrete details regarding the implementation of the package, regarding both its high-level API (`plotscaper`) as well as the more low-level platform (`plotscape`). 
 
