--- a/references.bib
+++ b/references.bib
@@ -1715,6 +1715,17 @@
   publisher	= {Elsevier}
 }
 
+@article{fielding2002,
+  title={Principled design of the modern web architecture},
+  author={Fielding, Roy T and Taylor, Richard N},
+  journal={ACM Transactions on Internet Technology (TOIT)},
+  volume={2},
+  number={2},
+  pages={115--150},
+  year={2002},
+  publisher={ACM New York, NY, USA}
+}
+
 @Article{	  kahn2005,
   title		= {An exhalent problem for teaching statistics},
   author	= {Kahn, Michael},
